<resources>
    <string name="app_name">Погода</string>
    <string name="base_url">http://api.openweathermap.org/data/2.5/</string>
    <string name="api_key">710515c42959b419fa06439a0c8430dd</string>
    <string name="unavailable_info">Невозможно обновить данные</string>
    <string name="unavailable_geo">Невозможно определить местоположение</string>
    <string name="unavailable_permission">Нет доступа к определению местоположения</string>
    <string name="unavailable_cache">Отсутствуют сохраненные данные</string>
    <string name="geo_title">Отсутствуют геоданные</string>
    <string name="geo_message">Для работы приложения необходимо включить получение данных о местоположении устройства</string>
    <string name="net_title">Отсутствует подключение</string>
    <string name="net_message">Для работы приложения необходимо включить передачу данных</string>
    <string name="confirm_title">Подтвердите действие</string>
    <string name="confirm_message">Вы действительно хотите выйти?</string>
    <string name="btn_ok">Ок</string>
    <string name="btn_cancel">Отмена</string>
    <string name="settings_update_wifi">Обновлять только по WI-FI</string>
    <string name="settings_update_start">Обновлять при старте</string>
    <string name="settings_ask">Спрашивать при выходе</string>

    <string name="navigation_drawer_open">Открыть боковое меню</string>
    <string name="navigation_drawer_close">Закрыть боковое меню</string>

    <string name="nav_search">Поиск</string>
    <string name="nav_current">Погода на сегодня</string>
    <string name="nav_forecast">Погода на неделю</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_exit">Выход</string>
</resources>
